install docker in machine as a prerequisite for cadvisor

--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,5 +1,6 @@
 - name: install Prometheus  
   hosts: prometheus_server
   roles:
-  - prometheus
-  - prometheusNodeExporter
+  # - prometheus
+  # - prometheusNodeExporter
+  - docker
