--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,8 +2,7 @@
 inventory=./inventory.ini
 private_key_file=/home/elmansey/.ssh/iti_test
 remote_user=ansible
-
-
+; deprecation_warnings=False
 [privilege_escalation]
 become= true
 become_method= sudo
