--- a/prometheusNodeExporter/tasks/main.yaml
+++ b/prometheusNodeExporter/tasks/main.yaml
@@ -77,8 +77,13 @@
     state: present
     insertafter: "^scrape_configs:"
   when: presence.stdout != "0"
-  notify:
-  - restart_prometheus
+
+
+- name: restart prometheus service
+  systemd:
+    name: prometheus
+    state: restarted
+    enabled: true
 
 
 
