--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,11 @@
 [defaults]
-inventory=./inventory.ini
+inventory=./inventory_aws_ec2.yaml
 private_key_file=/home/elmansey/.ssh/iti_test
 remote_user=ansible
-; deprecation_warnings=False
+enable_plugins= aws_ec2
+
+
+
 [privilege_escalation]
 become= true
 become_method= sudo
